--- a/package.json
+++ b/package.json
@@ -1,14 +1,17 @@
 {
-  "name": "recipies",
+  "name": "recipes",
   "version": "1.0.0",
   "type": "module",
   "description": "Here is a recipe locator application",
   "main": "index.js",
   "scripts": {
     "install": "cd server && npm i && cd ../client && npm i",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "develop": "concurrently \"cd server && npm run start\" \"cd client && npm run dev\""
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "concurrently": "^8.2.2"
+  }
 }
