--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "description": "Here is a recipe locator application",
   "main": "index.js",
   "scripts": {
-    "install": "npm i && cd server && npm i && cd ../client && npm i",
+    "install": "npm i concurrently && cd server && npm i && cd ../client && npm i",
     "develop": "concurrently \"cd server && npm run start\" \"cd client && npm run dev\""
   },
   "keywords": [],
