--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "main": "index.js",
   "scripts": {
     "install": "npm i concurrently && cd server && npm i && cd ../client && npm i",
-    "develop": "concurrently \"cd server && npm run start\" \"cd client && npm run dev\"",
+    "start": "concurrently \"cd server && npm run start\" \"cd client && npm run dev\"",
     "build": "cd client && npm run build"
   },
   "keywords": [],
