--- a/server/package.json
+++ b/server/package.json
@@ -12,7 +12,10 @@
   "license": "ISC",
   "dependencies": {
     "@apollo/server": "^4.10.2",
+    "apollo-server-express": "^3.13.0",
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^4.19.1",
     "graphql": "^16.8.1",
     "jsonwebtoken": "^9.0.2",
