--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.15.14",
     "graphql": "^16.8.1",
+    "jose": "^5.8.0",
     "jwt-decode": "^4.0.0",
     "next": "14.1.4",
     "react": "^18",
